[package]
name = "fints"
description = "A compliant FinTS implementation"
version = "0.1.0"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["fints", "banking", "hbci"]
categories = ["parser-implementations", "command-line-utilities", "command-line-interface"]
edition = "2018"

[badges]
travis-ci = { repository = "svenstaro/fints-rs", branch = "master" }
maintenance = { status = "actively-developed" }

[profile.release]
lto = true

[profile.bench]
lto = true

[dependencies]
fints_derive = { version = "0.1", path = "../fints_derive" }
# clap = "2"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
# deunicode = "0.4"
# rust_decimal = { version = "0.10", features = ["serde"] }
failure = "0.1"
log = "0.4"
pretty_env_logger = "0.4"
ptree = "0.3"
# pest = "2"
# pest_derive = "2"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_repr = "0.1.3"
# strum = "0.11"
# strum_macros = "0.11"
# mt940 = "0.3"
reqwest = "0.10"
fints-institute-db = "1.0"
base64 = "0.13.0"
encoding_rs = "0.8.13"
# [build-dependencies]
# skeptic = "0.13"
#
[dev-dependencies]
pretty_assertions = "0.6"
# rstest = "0.2"
# skeptic = "0.13"
# proptest = "0.8.7"
# regex = "1"
